Module2.3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEGINTABLE
    CLOSEDATA
    CLOSEDIV
    CLOSEHEADER
    CLOSEROW
    CLOSESPAN
    CLOSESTYLE
    CLOSETABLE
    GARBAGE
    OPENDATA
    OPENDIV
    OPENHEADER
    OPENROW
    OPENSPAN
    OPENSTYLE
    OPENTABLE

Grammar

Rule 0     S' -> start
Rule 1     start -> month
Rule 2     start -> monthDataul
Rule 3     start -> monthDateData
Rule 4     start -> empty
Rule 5     skiptag -> CONTENT skiptag
Rule 6     skiptag -> OPENHREF skiptag
Rule 7     skiptag -> CLOSEHREF skiptag
Rule 8     skiptag -> empty
Rule 9     month -> OPENHTWO CONTENT CONTENT CLOSEHTWO empty
Rule 10    month -> OPENHTWO CONTENT CONTENT CLOSEHTWO monthDataul
Rule 11    month -> <empty>
Rule 12    monthDateData -> OPENHTHREE CONTENT CONTENT CLOSEHTHREE openpData
Rule 13    openpData -> OPENP dataInEachLi CLOSEP monthDataul
Rule 14    openpData -> OPENP dataInEachLi CLOSEP openpData
Rule 15    monthDataul -> OPENUL dataLi CLOSEUL monthDataul
Rule 16    monthDataul -> empty
Rule 17    dataLi -> OPENLI dataInEachLi CLOSELI dataLi
Rule 18    dataLi -> empty
Rule 19    dataInEachLi -> CONTENT dataInEachLi
Rule 20    dataInEachLi -> empty
Rule 21    empty -> <empty>

Terminals, with rules where they appear

BEGINTABLE           : 
CLOSEDATA            : 
CLOSEDIV             : 
CLOSEHEADER          : 
CLOSEHREF            : 7
CLOSEHTHREE          : 12
CLOSEHTWO            : 9 10
CLOSELI              : 17
CLOSEP               : 13 14
CLOSEROW             : 
CLOSESPAN            : 
CLOSESTYLE           : 
CLOSETABLE           : 
CLOSEUL              : 15
CONTENT              : 5 9 9 10 10 12 12 19
GARBAGE              : 
OPENDATA             : 
OPENDIV              : 
OPENHEADER           : 
OPENHREF             : 6
OPENHTHREE           : 12
OPENHTWO             : 9 10
OPENLI               : 17
OPENP                : 13 14
OPENROW              : 
OPENSPAN             : 
OPENSTYLE            : 
OPENTABLE            : 
OPENUL               : 15
error                : 

Nonterminals, with rules where they appear

dataInEachLi         : 13 14 17 19
dataLi               : 15 17
empty                : 4 8 9 16 18 20
month                : 1
monthDataul          : 2 10 13 15
monthDateData        : 3
openpData            : 12 14
skiptag              : 5 6 7
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . month
    (2) start -> . monthDataul
    (3) start -> . monthDateData
    (4) start -> . empty
    (9) month -> . OPENHTWO CONTENT CONTENT CLOSEHTWO empty
    (10) month -> . OPENHTWO CONTENT CONTENT CLOSEHTWO monthDataul
    (11) month -> .
    (15) monthDataul -> . OPENUL dataLi CLOSEUL monthDataul
    (16) monthDataul -> . empty
    (12) monthDateData -> . OPENHTHREE CONTENT CONTENT CLOSEHTHREE openpData
    (21) empty -> .

  ! reduce/reduce conflict for $end resolved using rule 11 (month -> .)
    OPENHTWO        shift and go to state 6
    $end            reduce using rule 11 (month -> .)
    OPENUL          shift and go to state 7
    OPENHTHREE      shift and go to state 8

  ! $end            [ reduce using rule 21 (empty -> .) ]

    start                          shift and go to state 1
    month                          shift and go to state 2
    monthDataul                    shift and go to state 3
    monthDateData                  shift and go to state 4
    empty                          shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> month .

    $end            reduce using rule 1 (start -> month .)


state 3

    (2) start -> monthDataul .

    $end            reduce using rule 2 (start -> monthDataul .)


state 4

    (3) start -> monthDateData .

    $end            reduce using rule 3 (start -> monthDateData .)


state 5

    (4) start -> empty .
    (16) monthDataul -> empty .

  ! reduce/reduce conflict for $end resolved using rule 4 (start -> empty .)
    $end            reduce using rule 4 (start -> empty .)

  ! $end            [ reduce using rule 16 (monthDataul -> empty .) ]


state 6

    (9) month -> OPENHTWO . CONTENT CONTENT CLOSEHTWO empty
    (10) month -> OPENHTWO . CONTENT CONTENT CLOSEHTWO monthDataul

    CONTENT         shift and go to state 9


state 7

    (15) monthDataul -> OPENUL . dataLi CLOSEUL monthDataul
    (17) dataLi -> . OPENLI dataInEachLi CLOSELI dataLi
    (18) dataLi -> . empty
    (21) empty -> .

    OPENLI          shift and go to state 11
    CLOSEUL         reduce using rule 21 (empty -> .)

    dataLi                         shift and go to state 10
    empty                          shift and go to state 12

state 8

    (12) monthDateData -> OPENHTHREE . CONTENT CONTENT CLOSEHTHREE openpData

    CONTENT         shift and go to state 13


state 9

    (9) month -> OPENHTWO CONTENT . CONTENT CLOSEHTWO empty
    (10) month -> OPENHTWO CONTENT . CONTENT CLOSEHTWO monthDataul

    CONTENT         shift and go to state 14


state 10

    (15) monthDataul -> OPENUL dataLi . CLOSEUL monthDataul

    CLOSEUL         shift and go to state 15


state 11

    (17) dataLi -> OPENLI . dataInEachLi CLOSELI dataLi
    (19) dataInEachLi -> . CONTENT dataInEachLi
    (20) dataInEachLi -> . empty
    (21) empty -> .

    CONTENT         shift and go to state 17
    CLOSELI         reduce using rule 21 (empty -> .)

    dataInEachLi                   shift and go to state 16
    empty                          shift and go to state 18

state 12

    (18) dataLi -> empty .

    CLOSEUL         reduce using rule 18 (dataLi -> empty .)


state 13

    (12) monthDateData -> OPENHTHREE CONTENT . CONTENT CLOSEHTHREE openpData

    CONTENT         shift and go to state 19


state 14

    (9) month -> OPENHTWO CONTENT CONTENT . CLOSEHTWO empty
    (10) month -> OPENHTWO CONTENT CONTENT . CLOSEHTWO monthDataul

    CLOSEHTWO       shift and go to state 20


state 15

    (15) monthDataul -> OPENUL dataLi CLOSEUL . monthDataul
    (15) monthDataul -> . OPENUL dataLi CLOSEUL monthDataul
    (16) monthDataul -> . empty
    (21) empty -> .

    OPENUL          shift and go to state 7
    $end            reduce using rule 21 (empty -> .)

    monthDataul                    shift and go to state 21
    empty                          shift and go to state 22

state 16

    (17) dataLi -> OPENLI dataInEachLi . CLOSELI dataLi

    CLOSELI         shift and go to state 23


state 17

    (19) dataInEachLi -> CONTENT . dataInEachLi
    (19) dataInEachLi -> . CONTENT dataInEachLi
    (20) dataInEachLi -> . empty
    (21) empty -> .

    CONTENT         shift and go to state 17
    CLOSELI         reduce using rule 21 (empty -> .)
    CLOSEP          reduce using rule 21 (empty -> .)

    dataInEachLi                   shift and go to state 24
    empty                          shift and go to state 18

state 18

    (20) dataInEachLi -> empty .

    CLOSELI         reduce using rule 20 (dataInEachLi -> empty .)
    CLOSEP          reduce using rule 20 (dataInEachLi -> empty .)


state 19

    (12) monthDateData -> OPENHTHREE CONTENT CONTENT . CLOSEHTHREE openpData

    CLOSEHTHREE     shift and go to state 25


state 20

    (9) month -> OPENHTWO CONTENT CONTENT CLOSEHTWO . empty
    (10) month -> OPENHTWO CONTENT CONTENT CLOSEHTWO . monthDataul
    (21) empty -> .
    (15) monthDataul -> . OPENUL dataLi CLOSEUL monthDataul
    (16) monthDataul -> . empty

    $end            reduce using rule 21 (empty -> .)
    OPENUL          shift and go to state 7

    empty                          shift and go to state 26
    monthDataul                    shift and go to state 27

state 21

    (15) monthDataul -> OPENUL dataLi CLOSEUL monthDataul .

    $end            reduce using rule 15 (monthDataul -> OPENUL dataLi CLOSEUL monthDataul .)


state 22

    (16) monthDataul -> empty .

    $end            reduce using rule 16 (monthDataul -> empty .)


state 23

    (17) dataLi -> OPENLI dataInEachLi CLOSELI . dataLi
    (17) dataLi -> . OPENLI dataInEachLi CLOSELI dataLi
    (18) dataLi -> . empty
    (21) empty -> .

    OPENLI          shift and go to state 11
    CLOSEUL         reduce using rule 21 (empty -> .)

    dataLi                         shift and go to state 28
    empty                          shift and go to state 12

state 24

    (19) dataInEachLi -> CONTENT dataInEachLi .

    CLOSELI         reduce using rule 19 (dataInEachLi -> CONTENT dataInEachLi .)
    CLOSEP          reduce using rule 19 (dataInEachLi -> CONTENT dataInEachLi .)


state 25

    (12) monthDateData -> OPENHTHREE CONTENT CONTENT CLOSEHTHREE . openpData
    (13) openpData -> . OPENP dataInEachLi CLOSEP monthDataul
    (14) openpData -> . OPENP dataInEachLi CLOSEP openpData

    OPENP           shift and go to state 30

    openpData                      shift and go to state 29

state 26

    (9) month -> OPENHTWO CONTENT CONTENT CLOSEHTWO empty .
    (16) monthDataul -> empty .

  ! reduce/reduce conflict for $end resolved using rule 9 (month -> OPENHTWO CONTENT CONTENT CLOSEHTWO empty .)
    $end            reduce using rule 9 (month -> OPENHTWO CONTENT CONTENT CLOSEHTWO empty .)

  ! $end            [ reduce using rule 16 (monthDataul -> empty .) ]


state 27

    (10) month -> OPENHTWO CONTENT CONTENT CLOSEHTWO monthDataul .

    $end            reduce using rule 10 (month -> OPENHTWO CONTENT CONTENT CLOSEHTWO monthDataul .)


state 28

    (17) dataLi -> OPENLI dataInEachLi CLOSELI dataLi .

    CLOSEUL         reduce using rule 17 (dataLi -> OPENLI dataInEachLi CLOSELI dataLi .)


state 29

    (12) monthDateData -> OPENHTHREE CONTENT CONTENT CLOSEHTHREE openpData .

    $end            reduce using rule 12 (monthDateData -> OPENHTHREE CONTENT CONTENT CLOSEHTHREE openpData .)


state 30

    (13) openpData -> OPENP . dataInEachLi CLOSEP monthDataul
    (14) openpData -> OPENP . dataInEachLi CLOSEP openpData
    (19) dataInEachLi -> . CONTENT dataInEachLi
    (20) dataInEachLi -> . empty
    (21) empty -> .

    CONTENT         shift and go to state 17
    CLOSEP          reduce using rule 21 (empty -> .)

    dataInEachLi                   shift and go to state 31
    empty                          shift and go to state 18

state 31

    (13) openpData -> OPENP dataInEachLi . CLOSEP monthDataul
    (14) openpData -> OPENP dataInEachLi . CLOSEP openpData

    CLOSEP          shift and go to state 32


state 32

    (13) openpData -> OPENP dataInEachLi CLOSEP . monthDataul
    (14) openpData -> OPENP dataInEachLi CLOSEP . openpData
    (15) monthDataul -> . OPENUL dataLi CLOSEUL monthDataul
    (16) monthDataul -> . empty
    (13) openpData -> . OPENP dataInEachLi CLOSEP monthDataul
    (14) openpData -> . OPENP dataInEachLi CLOSEP openpData
    (21) empty -> .

    OPENUL          shift and go to state 7
    OPENP           shift and go to state 30
    $end            reduce using rule 21 (empty -> .)

    monthDataul                    shift and go to state 33
    openpData                      shift and go to state 34
    empty                          shift and go to state 22

state 33

    (13) openpData -> OPENP dataInEachLi CLOSEP monthDataul .

    $end            reduce using rule 13 (openpData -> OPENP dataInEachLi CLOSEP monthDataul .)


state 34

    (14) openpData -> OPENP dataInEachLi CLOSEP openpData .

    $end            reduce using rule 14 (openpData -> OPENP dataInEachLi CLOSEP openpData .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 0 resolved using rule (month -> <empty>)
WARNING: rejected rule (empty -> <empty>) in state 0
WARNING: reduce/reduce conflict in state 5 resolved using rule (start -> empty)
WARNING: rejected rule (monthDataul -> empty) in state 5
WARNING: reduce/reduce conflict in state 26 resolved using rule (month -> OPENHTWO CONTENT CONTENT CLOSEHTWO empty)
WARNING: rejected rule (monthDataul -> empty) in state 26
